--- a/templates/consumer_list.html
+++ b/templates/consumer_list.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Sleep Data List
+Consumer Data List
 {% endblock %}
 
 {% block content %}
-<h2 class="mb-4">Sleep Data List</h2>
-<div class="row p-5">
+<h2 class="mb-4">Consumer Data List</h2>
+ <!--<div class="row p-5">
    <!-- Dropdown lọc theo BMI Category -->
    <form method="GET" action="{{ url_for('home') }}">
         <div class="form-group col-1">
