--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
 <body>
     <header class="bg-dark text-white p-3">
         <div class="container d-flex justify-content-between align-items-center">
-            <h1 class="h3">Sleep Data Management</h1>
+            <h1 class="h3">Consumer Data Management</h1>
             <div id="real-time-clock" class="h5"></div> <!-- Hiển thị thời gian thực -->
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
