--- a/templates/consumer_list.html
+++ b/templates/consumer_list.html
@@ -8,7 +8,7 @@ Consumer Data List
 <h2 class="mb-4">Consumer Data List</h2>
  <!--<div class="row p-5">
    <!-- Dropdown lọc theo BMI Category -->
-   <form method="GET" action="{{ url_for('home') }}">
+   <!--  <form method="GET" action="{{ url_for('home') }}">
         <div class="form-group col-1">
             <label for="bmi-filter">BMI Category:</label>
             <select name="bmi_category" id="bmi-filter" class="form-control" onchange="this.form.submit()">
@@ -21,7 +21,7 @@ Consumer Data List
         </div>
     </form method="GET" action="{{ url_for('home') }}">
         <!-- Dropdown lọc theo Sleep Disorder -->
-        <div class="form-group col-1">
+      <!--  <div class="form-group col-1">
             <label for="sleep-disorder-filter">Sleep Disorder:</label>
             <select name="sleep_disorder" id="sleep-disorder-filter" class="form-control" onchange="this.form.submit()">
                 <option value="">All</option>
@@ -31,38 +31,52 @@ Consumer Data List
             </select>
         </div>
     </form>
-</div>
+</div> -->
 <!-- Hiển thị bảng dữ liệu -->
 <table class="table table-striped table-hover">
     <thead class="table-dark">
         <tr>
-            <th><a href="{{ url_for('home', sort_by='Person ID', order='asc') }}">Person ID</a></th>
-            <th><a href="{{ url_for('home', sort_by='Age', order='asc') }}">Age</a></th>
-            <th><a href="{{ url_for('home', sort_by='Sleep Duration', order='asc') }}">Sleep Duration</a></th>
-            <th><a href="{{ url_for('home', sort_by='Quality of Sleep', order='asc') }}">Quality of Sleep</a></th>
-            <th><a href="{{ url_for('home', sort_by='Physical Activity Level', order='asc') }}">Physical Activity Level</a></th>
-            <th><a href="{{ url_for('home', sort_by='Stress Level', order='asc') }}">Stress Level</a></th>
-            <th>BMI Category</th>
-            <th>Blood Pressure</th>
-            <th>Heart Rate</th>
-            <th>Daily Steps</th>
-            <th>Sleep Disorder</th>
+            <th>Customer ID</th>
+            <th>Age</th>
+            <th>Gender</th>
+            <th>Item Purchased</th>
+            <th>Category</th>
+            <th>Purchase Amount (USD)</th>
+            <th>Location</th>
+            <th>Size</th>
+            <th>Color</th>
+            <th>Season</th>
+            <th>Review Rating</th>
+            <th>Subscription Status</th>
+            <th>Shipping Type</th>
+            <th>Discount Applied</th>
+            <th>Promo Code Used</th>
+            <th>Previous Purchases</th>
+            <th>Payment Method</th>
+            <th>Frequency of Purchases</th>
         </tr>
     </thead>
     <tbody>
-        {% for data in sleep_data %}
+        {% for data in consumer_data %}
         <tr>
-            <td>{{ data['Person ID'] }}</td>
+            <td>{{ data['Customer ID'] }}</td>
             <td>{{ data['Age'] }}</td>
-            <td>{{ data['Sleep Duration'] }}</td>
-            <td>{{ data['Quality of Sleep'] }}</td>
-            <td>{{ data['Physical Activity Level'] }}</td>
-            <td>{{ data['Stress Level'] }}</td>
-            <td>{{ data['BMI Category'] }}</td>
-            <td>{{ data['Blood Pressure'] }}</td>
-            <td>{{ data['Heart Rate'] }}</td>
-            <td>{{ data['Daily Steps'] }}</td>
-            <td>{{ data['Sleep Disorder'] }}</td>
+            <td>{{ data['Gender'] }}</td>
+            <td>{{ data['Item Purchased'] }}</td>
+            <td>{{ data['Category'] }}</td>
+            <td>{{ data['Purchase Amount (USD)'] }}</td>
+            <td>{{ data['Location'] }}</td>
+            <td>{{ data['Size'] }}</td>
+            <td>{{ data['Color'] }}</td>
+            <td>{{ data['Season'] }}</td>
+            <td>{{ data['Review Rating'] }}</td>
+            <td>{{ data['Subscription Status'] }}</td>
+            <td>{{ data['Shipping Type'] }}</td>
+            <td>{{ data['Discount Applied'] }}</td>
+            <td>{{ data['Promo Code Used'] }}</td>
+            <td>{{ data['Previous Purchases'] }}</td>
+            <td>{{ data['Payment Method'] }}</td>
+            <td>{{ data['Frequency of Purchases'] }}</td>
         </tr>
         {% endfor %}
     </tbody>
